modified pick up locations

--- a/src/app/contactus-card/contactus-card.component.html
+++ b/src/app/contactus-card/contactus-card.component.html
@@ -35,7 +35,23 @@
         <div [ngClass]="!mobile? 'right_container' : 'mobile_right_container'" >
             <div [ngClass]="!mobile? 'right_container_padding' : ''">
                 <h3 >PICK UP AND DELIVERIES</h3>
-                <p>To collect your order, please head to Bedok Reservoir MRT &#40;DT30, Blue Line&#41; Exit A. Free delivery for orders above $50.</p>
+                <p>Free island-wide delivery for orders over $50. A flat $10 courier fee applies otherwise.</p>
+                <p>Deliveries will be made within the following windows:</p>
+                <ul>
+                    <li>Slot 1: 9am - 2pm</li>
+                    <li>Slot 2: 4pm - 9pm</li>
+                </ul>
+                <br/>
+                <p>Self-collection is always free at the following locations:</p>
+                <ul>
+                    <li>Bedok Reservoir MRT, Exit A</li>
+                    <li>Paya Lebar MRT, Exit E</li>
+                    <li>Tampines MRT, Exit B</li>
+                    <li>Buona Vista MRT, Exit C (Tue)</li>
+                    <li>Raffles Place MRT, Exit B (Wed)</li>
+                </ul>
+                <br/>
+                <p>We'll reach out to you for updates on delivery status or to coordinate pickups.</p>
                 <br/>
                 <h3 >CORPORATE AND GROUP ORDERS</h3>
                 <p>Proofing happiness for customers from:</p>
