updated content about us and contact us(pickup locations)

--- a/src/app/contactus-card/contactus-card.component.html
+++ b/src/app/contactus-card/contactus-card.component.html
@@ -30,30 +30,72 @@
             </a>
             
             <br/>
+            <br/>
+            <h3>OPENING HOURS</h3>
+            <table style="width: 50%">
+                <tr>
+                    <td>Monday</td>
+                    <td>Closed</td>
+                </tr>
+                <tr>
+                    <td>Tuesday</td>
+                    <td>9am - 10pm</td>
+                </tr>
+                <tr>
+                    <td>Wednesday</td>
+                    <td>9am - 10pm</td>
+                </tr>
+                <tr>
+                    <td>Thursday</td>
+                    <td>Closed</td>
+                </tr>
+                <tr>
+                    <td>Friday</td>
+                    <td>9am - 10pm</td>
+                </tr>
+                <tr>
+                    <td>Saturday</td>
+                    <td>9am - 10pm</td>
+                </tr>
+                <tr>
+                    <td>Sunday</td>
+                    <td>9am - 10pm</td>
+                </tr>
+            </table>
+            <br>
             <br *ngIf="mobile"/>
         </div>
         <div [ngClass]="!mobile? 'right_container' : 'mobile_right_container'" >
             <div [ngClass]="!mobile? 'right_container_padding' : ''">
                 <h3 >PICK UP AND DELIVERIES</h3>
-                <p>Free island-wide delivery for orders over $50. A flat $10 courier fee applies otherwise.</p>
+                <p><b>Free island-wide delivery </b>for orders over $50. A flat $10 courier fee applies otherwise.</p>
                 <p>Deliveries will be made within the following windows:</p>
+                <p></p>
                 <ul>
                     <li>Slot 1: 9am - 2pm</li>
                     <li>Slot 2: 4pm - 9pm</li>
                 </ul>
-                <br/>
                 <p>Self-collection is always free at the following locations:</p>
-                <ul>
+                <ul>  
                     <li>Bedok Reservoir MRT, Exit A</li>
-                    <li>Paya Lebar MRT, Exit E</li>
+                    <li>Paya Lebar MRT, Exit F</li>
                     <li>Tampines MRT, Exit B</li>
-                    <li>Buona Vista MRT, Exit C (Tue)</li>
-                    <li>Raffles Place MRT, Exit B (Wed)</li>
+                    <li>Marina One, The Heart (Tue, 12-1pm)</li>
+                    <li>Mapletree Business City, B80 (Tue, 2-3pm)</li>
+                    <li>Raffles Place MRT, Exit B (Wed, 12-1pm)</li>
+                    <li>Buona Vista MRT, Exit C (Wed, 1-2pm)</li>
                 </ul>
-                <br/>
                 <p>We'll reach out to you for updates on delivery status or to coordinate pickups.</p>
                 <br/>
                 <h3 >CORPORATE AND GROUP ORDERS</h3>
+           
+                <p>For corporate and group orders, please reach out through 
+                    <a href="mailto:contact@theproofingground.sg" >contact&#64;theproofingground.sg</a>. 
+                    We'd love to create a bespoke and memorable experience for you, set up corporate offers, 
+                    or other forms of partnerships!
+                </p>
+             
+                
                 <p>Proofing happiness for customers from:</p>
                 <div class="customer_panel">
                     <img src="/assets/Review_Google.webp"> 
