--- a/src/app/aboutus-card/aboutus-card.component.html
+++ b/src/app/aboutus-card/aboutus-card.component.html
@@ -10,10 +10,20 @@
                 <h2 class="bunketry_header">Hearty, healthy, homely</h2>
                 <br />
                 <div [ngClass]="!mobile? 'desktop_caption_text' : 'mobile_caption_text'">
-                    <p>The Proofing Ground embraces the warmth of home to nourish hearts and palates, and prove that
-                        quality always goes beyond. Enjoy our hand-kneaded sourdoughs and shokupan milk breads with
-                        curated compound butters, or indulge in our probiotic-rich kombucha and milk kefir - all freshly
-                        made on order.</p>
+                    <p>Escape the proving ground, take a pause at The Proofing Ground. 
+                        In a world that demands us to constantly prove our worth, 
+                        we offer a welcome respite to escape the daily grind and savor the 
+                        simple pleasures of hearty, healthy, and homemade food. 
+                        We invite you to slow down, connect with loved ones, and 
+                        rediscover the joy of shared experiences through the warm 
+                        embrace of home. </p>
+                    <p>
+                        Our menu features comforting classics crafted with care, 
+                        using only the finest ingredients to nourish hearts and palates. 
+                        Enjoy our hand-kneaded sourdoughs and shokupan milk breads with 
+                        curated compound butters, or indulge in our probiotic-rich 
+                        kombucha and milk kefir - all freshly made on order. 
+                    </p>
                 </div>
 
 
