--- a/src/app/contactus-card/contactus-card.component.html
+++ b/src/app/contactus-card/contactus-card.component.html
@@ -32,7 +32,7 @@
             <br/>
             <br/>
             <h3>OPENING HOURS</h3>
-            <table style="width: 50%">
+            <table [ngStyle] =  "{'wdith':mobile? '50%': '100%'}">
                 <tr>
                     <td>Monday</td>
                     <td>Closed</td>
