--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -16,7 +16,7 @@
                         <li [routerLink]="['']" fragment="about-section" id="nav_about" ><a >About</a></li>
                         <li [routerLink]="['']" fragment="menu-section" id="nav_menu"><a >Menu</a></li>
                         <li [routerLink]="['']" fragment="contact-section" id="nav_contact"><a >Contact</a></li>
-                        <li routerLink="/blog" id="blog_button"><a >Blog</a></li>
+                        <!-- <li routerLink="/blog" id="blog_button"><a >Blog</a></li>-->
                         <li  (click)="orderRedirect()" style=" border:1.5px solid #ead8c2;" id="nav_order"><a  style="text-decoration: none;color: #ead8c2;" >Order Now</a></li>
                     </ul>
 
