--- a/src/app/blog/blog.component.html
+++ b/src/app/blog/blog.component.html
@@ -6,16 +6,16 @@
         <br />
         <br />
         <br />
-        <div style="display: flex;">
+        <div style="display: flex;">    
             <div *ngFor="let blog of getPinnedBlog">
-                <h4>{{blog.title}}</h4>
+                <h4>{{blog.Caption}}</h4>
             </div>
         </div>
         <!-- List of Blog Post-->
          <div>
             <div *ngFor="let blog of BlogPost; let i = index">
-                <h4>{{blog.title}}</h4>
-                <p [innerHTML]="blog.caption">
+                <h4>{{blog.Caption}}</h4>
+                <p [innerHTML]="blog.Content">
                 </p>
             </div>
          </div>
